logs/jinja2pipe.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/BareNecessities-0.2.8.egg-info'...
Listing './lib/python3.5/site-packages/CommandTool-0.4.1.egg-info'...
Listing './lib/python3.5/site-packages/ConfigConvert-0.1.6.egg-info'...
Listing './lib/python3.5/site-packages/ConversionKit-0.3.4.egg-info'...
Listing './lib/python3.5/site-packages/Jinja2-2.5.5.egg-info'...
Listing './lib/python3.5/site-packages/Jinja2Pipe-0.1.0.egg-info'...
Listing './lib/python3.5/site-packages/NestedRecord-0.3.0.egg-info'...
Listing './lib/python3.5/site-packages/PipeStack-0.4.0.egg-info'...
Listing './lib/python3.5/site-packages/RecordConvert-0.1.3.egg-info'...
Listing './lib/python3.5/site-packages/StringConvert-0.3.2.egg-info'...
Listing './lib/python3.5/site-packages/bn'...
Compiling './lib/python3.5/site-packages/bn/__init__.py'...
***   File "./lib/python3.5/site-packages/bn/__init__.py", line 170
    except error, err:
                ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/commandtool'...
Compiling './lib/python3.5/site-packages/commandtool/__init__.py'...
***   File "./lib/python3.5/site-packages/commandtool/__init__.py", line 448
    print help(service)
             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/commandtool/recipes_267662.py'...
***   File "./lib/python3.5/site-packages/commandtool/recipes_267662.py", line 88
    print 'Without wrapping function\n'
                                      ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/configconvert'...
Compiling './lib/python3.5/site-packages/configconvert/__init__.py'...
***   File "./lib/python3.5/site-packages/configconvert/__init__.py", line 30
    except ImportError, e:
                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/configconvert/internal.py'...
***   File "./lib/python3.5/site-packages/configconvert/internal.py", line 39
    except ImportError, e:
                      ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/conversionkit'...
Compiling './lib/python3.5/site-packages/conversionkit/__init__.py'...
***   File "./lib/python3.5/site-packages/conversionkit/__init__.py", line 49
    except formencode.Invalid, e:
                             ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/jinja2'...
Listing './lib/python3.5/site-packages/jinja2/_markupsafe'...
Listing './lib/python3.5/site-packages/jinja2/testsuite'...
Listing './lib/python3.5/site-packages/jinja2/testsuite/res'...
Listing './lib/python3.5/site-packages/jinja2/testsuite/res/templates'...
Listing './lib/python3.5/site-packages/jinja2/testsuite/res/templates/foo'...
Listing './lib/python3.5/site-packages/jinja2pipe'...
Listing './lib/python3.5/site-packages/nestedrecord'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pipestack'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/recordconvert'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/stringconvert'...
Compiling './lib/python3.5/site-packages/stringconvert/__init__.py'...
***   File "./lib/python3.5/site-packages/stringconvert/__init__.py", line 83
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/stringconvert/email.py'...
***   File "./lib/python3.5/site-packages/stringconvert/email.py", line 114
    except (socket.error, DNS.DNSError), e:
                                       ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/stringconvert/url.py'...
***   File "./lib/python3.5/site-packages/stringconvert/url.py", line 11
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './share'...
Listing './share/python-wheels'...
